{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 57,
  "lineage": "0eba339d-6a2d-8737-35b2-59295ce36f06",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:security-group/sg-0a7db2cb33a201b4a",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0a7db2cb33a201b4a",
            "ingress": [],
            "name": "my-eks-cluster20211012110612172200000007",
            "name_prefix": "my-eks-cluster",
            "owner_id": "809801096875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:security-group/sg-09cc1905b9daf669a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-09cc1905b9daf669a",
            "ingress": [],
            "name": "my-eks-cluster20211012110612487300000008",
            "name_prefix": "my-eks-cluster",
            "owner_id": "809801096875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1918413820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7db2cb33a201b4a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1954566290",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7db2cb33a201b4a",
            "self": false,
            "source_security_group_id": "sg-09cc1905b9daf669a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3079390737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09cc1905b9daf669a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3531300045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cc1905b9daf669a",
            "self": false,
            "source_security_group_id": "sg-0a7db2cb33a201b4a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2387126925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cc1905b9daf669a",
            "self": false,
            "source_security_group_id": "sg-0a7db2cb33a201b4a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2412655806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09cc1905b9daf669a",
            "self": false,
            "source_security_group_id": "sg-09cc1905b9daf669a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0538763e08ee98b87",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-13-108-71.us-west-2.compute.amazonaws.com",
            "public_ip": "52.13.108.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0aed75df541bc9cd3",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-27-124-0.us-west-2.compute.amazonaws.com",
            "public_ip": "52.27.124.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a5b2fc81349bcecc",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-83-223-122.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.223.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:internet-gateway/igw-02f9ccea9297c4a51",
            "id": "igw-02f9ccea9297c4a51",
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0538763e08ee98b87",
            "connectivity_type": "public",
            "id": "nat-035db60aedaa76cc9",
            "network_interface_id": "eni-09f6dfb4450667d88",
            "private_ip": "10.0.101.138",
            "public_ip": "52.13.108.71",
            "subnet_id": "subnet-0c96a72037112e2c0",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aed75df541bc9cd3",
            "connectivity_type": "public",
            "id": "nat-0d867ba36c9a2bc8d",
            "network_interface_id": "eni-0a67c3a8de2ad11ac",
            "private_ip": "10.0.102.9",
            "public_ip": "52.27.124.0",
            "subnet_id": "subnet-05caab9c4ae1ad7c0",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5b2fc81349bcecc",
            "connectivity_type": "public",
            "id": "nat-06d7531746f76f533",
            "network_interface_id": "eni-09157b46d549716bf",
            "private_ip": "10.0.103.78",
            "public_ip": "35.83.223.122",
            "subnet_id": "subnet-072ca7796cc8ade77",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-us-west-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f04128756fcbd8a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035db60aedaa76cc9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f04128756fcbd8a0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09aa1a586ba380b891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d867ba36c9a2bc8d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09aa1a586ba380b89",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00aa10d9a9ce82b631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d7531746f76f533",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00aa10d9a9ce82b63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f9ccea9297c4a51",
            "id": "r-rtb-080d6b44ff45dfdec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080d6b44ff45dfdec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:route-table/rtb-0f04128756fcbd8a0",
            "id": "rtb-0f04128756fcbd8a0",
            "owner_id": "809801096875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:route-table/rtb-09aa1a586ba380b89",
            "id": "rtb-09aa1a586ba380b89",
            "owner_id": "809801096875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:route-table/rtb-00aa10d9a9ce82b63",
            "id": "rtb-00aa10d9a9ce82b63",
            "owner_id": "809801096875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:route-table/rtb-080d6b44ff45dfdec",
            "id": "rtb-080d6b44ff45dfdec",
            "owner_id": "809801096875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c4208ff113ea8d",
            "route_table_id": "rtb-0f04128756fcbd8a0",
            "subnet_id": "subnet-0847e38d75a4a0c44"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea6cfd29edb6626",
            "route_table_id": "rtb-09aa1a586ba380b89",
            "subnet_id": "subnet-0480ff189791f1a94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0708de88ab95443c4",
            "route_table_id": "rtb-00aa10d9a9ce82b63",
            "subnet_id": "subnet-07821ac5143e42f3e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ce73736d0a7338a",
            "route_table_id": "rtb-080d6b44ff45dfdec",
            "subnet_id": "subnet-0c96a72037112e2c0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a68d55dc439ec67",
            "route_table_id": "rtb-080d6b44ff45dfdec",
            "subnet_id": "subnet-05caab9c4ae1ad7c0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0033bf9bba11eb10b",
            "route_table_id": "rtb-080d6b44ff45dfdec",
            "subnet_id": "subnet-072ca7796cc8ade77"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-0847e38d75a4a0c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0847e38d75a4a0c44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-0480ff189791f1a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0480ff189791f1a94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-07821ac5143e42f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07821ac5143e42f3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-0c96a72037112e2c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c96a72037112e2c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-05caab9c4ae1ad7c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-05caab9c4ae1ad7c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:subnet/subnet-072ca7796cc8ade77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-072ca7796cc8ade77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2c",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc-public-us-west-2c",
              "Terraform": "true",
              "k8's/cluster/my-eks-cluster": "shared",
              "k8's/role/elb": "1"
            },
            "vpc_id": "vpc-0f74785e809807a82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809801096875:vpc/vpc-0f74785e809807a82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4e839782e15b167",
            "default_route_table_id": "rtb-0076b1a378819aae4",
            "default_security_group_id": "sg-014f26962b30a7483",
            "dhcp_options_id": "dopt-be4c4fc6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f74785e809807a82",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0076b1a378819aae4",
            "owner_id": "809801096875",
            "tags": {
              "Environment": "Test",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}